--- a/public/assets/sass/foundation/_base.scss
+++ b/public/assets/sass/foundation/_base.scss
@@ -37,8 +37,8 @@ a {
     color: $black;
     &:hover {
         cursor: pointer;
-        opacity: 0.7;
         transition: all .3s ease;
+        color: $maincolor;
     }
     img {
         &:hover {
@@ -60,6 +60,11 @@ a:link,
 a:visited,
 a:active {
     color: $black;
+    &:hover {
+        cursor: pointer;
+        transition: all .3s ease;
+        color: $maincolor;
+    }
 }
 
 p {
