--- a/public/assets/sass/object/project/_top.scss
+++ b/public/assets/sass/object/project/_top.scss
@@ -53,6 +53,12 @@
         display: inline-block;
         padding: 1rem 2rem;
         background-color: $maincolor;
+        border: $maincolor 1px solid;
+        &:hover {
+            color: $maincolor;
+            background-color: $white;
+            border: $maincolor 1px solid;
+        }
         @media screen and (max-width: $bp-small) {
             padding: 1rem 1.5rem;
             font-size: $middle;
@@ -92,6 +98,13 @@
         padding-bottom: 1rem;
         margin-bottom: 1rem;
         line-height: 1.6;
+        a {
+            &:hover {
+                color: $maincolor;
+                cursor: pointer;
+                transition: all .3s ease;
+            }
+        }
         &:last-child {
             border-bottom: none;
             padding-bottom: 0;
