--- a/public/assets/sass/override/_js.scss
+++ b/public/assets/sass/override/_js.scss
@@ -2,6 +2,9 @@
                     display: none;
                 }
 
+                // .js-header__menu {
+                //     display: none;
+                // }
                 .swiper-slide {
                     img {
                         border: 3px solid $white;
