--- a/public/assets/sass/layout/_header.scss
+++ b/public/assets/sass/layout/_header.scss
@@ -56,7 +56,7 @@
                                                                     top: 5.5rem;
                                                                 }
                                                             }
-
+                                                            
                                                             .l-header__logo {
                                                                 padding: 1.4rem;
                                                                 @media screen and (max-width: $bp-small) {
@@ -74,13 +74,13 @@
                                                                     }
                                                                 }
                                                             }
-
+                                                            
                                                             .l-header__nav {
                                                                 // width: 100%;
                                                                 display: inline-flex;
                                                                 justify-content: center;
                                                             }
-
+                                                            
                                                             .l-header__nav-menu {
                                                                 // width: 100%;
                                                                 font-size: 1.3rem;
@@ -98,7 +98,7 @@
                                                                     a {
                                                                         position: relative; // width: 100%;
                                                                         margin-right: 0rem;
-                                                                        padding-bottom: 1rem;
+                                                                        // padding-bottom: 1rem;
                                                                         display: inline;
                                                                         // display: flex;
                                                                         // justify-content: center;
@@ -165,7 +165,7 @@
                                                                     // display: none;
                                                                 }
                                                             }
-
+                                                            
                                                             .l-header__bar-menu {
                                                                 @media screen and (max-width: $bp-middle) {
                                                                     display: flex;
@@ -198,7 +198,7 @@
                                                                     top: 5rem;
                                                                 }
                                                             }
-
+                                                            
                                                             .l-header__bar {
                                                                 span {
                                                                     position: absolute;
@@ -270,7 +270,7 @@
                                                                     }
                                                                 }
                                                             }
-
+                                                            
                                                             .l-header__nav-btn {
                                                                 // width: 100%;
                                                                 height: 5.5rem;
